@@ -1595,6 +1595,14 @@ iOS browsers (iPhone, iPod, iPad) can launch YouTube videos in a separate
 player).
 </p>
 
+<p>
+Mobile Safari (iPhone, iPad, iPod) supports only one sound channel. 
+If you start a new sound while another is playing, the other sound will be
+stopped. If you target mobile devices, it's best to disable either
+background music or sound effects (if you have them), otherwise any sound
+effect during the story will make background music stop abruptly. 
+</p>
+
 
 <h3>Notify</h3>
 
